static/style.css
/*remember to change these when this site gets a domain:*/


@font-face {
  font-family: Apoc;
  src: url(https://jacquelinzazueta.com/static/bob.ttf?raw=true);
}

@font-face {
  font-family: ApocDark;
  src: url(https://jacquelinzazueta.com/static/bob.ttf?raw=true);
}

body {
    font-family: 'Arial', sans-serif;
    margin: 50px 25px;
    background: #ededed;
    color: #125926;
}

h2{
   font-family: 'Apoc', sans-serif;
}

#pagetitle{
  width:100%;
}

#series {
  margin:auto;
  width:200px;
}
a {
    color: #125926;
    font-family: 'Apoc', sans-serif;
}

 img {
    max-width:600px;
    max-height:600px;
  }

a:hover {
    color: #33bbdf;
}

header {
    margin-left:0;
    margin-top: 0px;
    max-width:700px;
    width: 92%; /* 0 width - change this with JavaScript */
    position: fixed; /* Stay in place */
    z-index: 1; /* Stay on top */
    top:1%;
    left:2%;
    overflow-x: hidden; /* Disable horizontal scroll */
    /*overflow-y:scroll;*/
    padding-top: 0px; /* Place content 60px from the top */
    
    vertical-align:baseline;
}

/*header, footer, div.page {
    width: 760px;
    margin: 0 auto;
    padding: 20px 30px;
}*/

header h1 {
        font-family: 'Apoc', sans-serif;
    margin: 0;
    font-weight: bold;
    font-size: 22px;
}



header nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

header nav ul li {
    display: inline;
    margin: 0 8px 0 0;
    padding: 0;
}

div.page {
  margin-left:25%;
    max-width:1100px;
      min-height: 600px;

}


.sidebar {
  margin: 0;
  padding: 0;
  width: 200px; 
  height: 100%;
  overflow: auto;
}

/* Sidebar links */
.sidebar a {
  display: block;
  padding: 5px;
  text-decoration: none;
}

/* Active/current link */
.sidebar a.active {
 
  text-decoration: underline;
}

/* Links on mouse-over */
.sidebar a:hover:not(.active) {
text-decoration: underline;
}

/* Page content. The value of the margin-left property should match the value of the sidebar's width property */
div.content {
  margin-left: 200px;
  padding: 1px 16px;
  height: 1000px;

}

.slick-prev:before {
  content: "<";
  text-shadow: 2px 2px 2px rgba(0,0,0,0.24);
  font-size: 30px;
}

.slick-next:before {
  content: ">";
 text-shadow: 2px 2px 2px rgba(0,0,0,0.24);
  font-size: 30px;
}
.slick-next:before{
    position: absolute;
    z-index: 1000;
    top: 50%;
    right: 0%;
}
.slick-prev:before{
    position: absolute;
    z-index: 1000;
    top: 50%;
    left: 0;
}

.slick-slide img {
  margin-left:auto;
  margin-right:auto;
  }

button, input[type="submit"], input[type="reset"] {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;
}

.container {
  display: flex; /* or inline-flex */
  flex-wrap: wrap;
}

.project {
  padding: 2%;
  flex-grow: 1;
  flex-basis: 16%;
}

.project img {
    max-width:350px;
     height: auto;
    width: auto;
    max-height: 350px;
}

.project > .title {
  display:block;

}

figcaption > h3 > a{
    text-decoration: none;
}

footer {
  float:right;
  font-size:12px;
}

#splash {
  margin-left:15%;
}

/* On screens that are less than 700px wide, make the sidebar into a topbar */
@media screen and (max-width: 700px), and (-webkit-min-device-pixel-ratio: 1) {

  #splash {
  margin-left:0%;
}

nav > div > ul {
  min-height:60px;
  font-size:24px;

}

nav > div > ul > li > a {
  margin-left:10px;
text-shadow: 2px 2px 2px rgba(0,0,0,0.24);
}

.project img{
  min-width:100%;
    max-width: 100%;
    max-height:100%;
}

  .page{
    margin-top:40%;
    margin-left:0% !important;

  }

  div.project {
    min-width:100%;
  }

  img {
    width:100%;
    max-width: 100%;
  }

  header {
    width:100%;
    max-width:100%;
  }

  .sidebar {
  
    width: 100%;
    height: auto;
    position: relative;
  }
  .sidebar a {float: left;}
  div.content {margin-left: 0;}
}

/* On screens that are less than 400px, display the bar vertically, instead of horizontally */
/*@media screen and (max-width: 400px) {
  .sidebar a {
    text-align: center;
    float: none;
  }*/
}

